--- a/.github/workflows/build-binaries-and-images.yaml
+++ b/.github/workflows/build-binaries-and-images.yaml
@@ -7,7 +7,7 @@ on:
 jobs:
   build-binaries-linux:
     name: Build Binaries (Linux)
-    runs-on: ubuntu-22.04-32core
+    runs-on: ubuntu-latest
 
     permissions:
       contents: read
@@ -39,7 +39,7 @@ jobs:
 
   build-binaries-macos:
     name: Build Binaries (macOS)
-    runs-on: macos-13-xlarge
+    runs-on: macos-latest
 
     permissions:
       contents: read
@@ -95,7 +95,7 @@ jobs:
 
   build-binaries-windows:
     name: Build Binaries (Windows)
-    runs-on: windows-2022-16core
+    runs-on: windows-latest
 
     permissions:
       contents: read
@@ -133,7 +133,7 @@ jobs:
 
   build-packages:
     name: Build Debian Packages
-    runs-on: ubuntu-22.04-32core
+    runs-on: ubuntu-latest
     needs: build-binaries-linux
 
     permissions:
@@ -204,7 +204,7 @@ jobs:
 
   build-docker-images:
     name: Build Docker Images
-    runs-on: ubuntu-22.04-32core
+    runs-on: ubuntu-latest
     needs: build-packages
 
     permissions:
