--- a/.github/workflows/build-docker-images.yaml
+++ b/.github/workflows/build-docker-images.yaml
@@ -1,12 +1,12 @@
-name: Build Binaries and Docker Images
-run-name: Build Binaries and Docker Images
+name: Build Docker Images
+run-name: Build Docker Images
 
 on:
   workflow_dispatch:
 
 jobs:
-  build-binaries-linux:
-    name: Build Binaries (Linux)
+  build-packages:
+    name: Build Debian Packages
     runs-on: ubuntu-latest
 
     permissions:
@@ -21,142 +21,21 @@ jobs:
         with:
           driver: docker
 
-      - name: Build binaries
-        run: |
-          cd build.assets
-          make build-binaries
-
-      - name: Upload Linux binaries
-        uses: actions/upload-artifact@v4
-        with:
-          name: linux-binaries
-          path: |
-            build/tsh
-            build/tbot
-            build/tctl
-            build/teleport
-          if-no-files-found: error
-
-  build-binaries-macos:
-    name: Build Binaries (macOS)
-    runs-on: macos-latest
-
-    permissions:
-      contents: read
-
-    steps:
-      - name: Checkout Teleport
-        uses: actions/checkout@v4
-
-      - name: Fix home dir perms
-        run: sudo chown -R $(id -u):$(id -g) $HOME/.cache $HOME/.config
-
-      - name: Determine Toolchain Versions
-        id: toolchain
-        run: |
-          echo "node-version=$(make -s -C build.assets print-node-version)" >> $GITHUB_OUTPUT
-          echo "go-version=$(make -s -C build.assets print-go-version | sed 's/^go//')" >> $GITHUB_OUTPUT
-          echo "rust-version=$(make -s -C build.assets print-rust-version)" >> $GITHUB_OUTPUT
-          echo "PKG_CONFIG_PATH=$(build.assets/build-fido2-macos.sh pkg_config_path)" >> $GITHUB_ENV
-
-      - name: Install Node Toolchain
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ steps.toolchain.outputs.node-version }}
-
-      - name: Setup pnpm
-        run: corepack enable pnpm
-
-      - name: Install Go Toolchain
-        uses: actions/setup-go@v5
-        with:
-          cache: false
-          go-version: ${{ steps.toolchain.outputs.go-version }}
-
-      - name: Configure Rust Toolchain
-        run: rustup override set ${{ steps.toolchain.outputs.rust-version }}
-
-      - name: Install wasm-pack
-        run: make ensure-wasm-deps
-
-      - name: Build binaries
-        run: make binaries
-
-      - name: Upload macOS binaries
-        uses: actions/upload-artifact@v4
-        with:
-          name: macos-binaries
-          path: |
-            build/tsh
-            build/tbot
-            build/tctl
-            build/teleport
-          if-no-files-found: error
-
-  build-binaries-windows:
-    name: Build Binaries (Windows)
-    runs-on: windows-latest
-
-    permissions:
-      contents: read
-
-    steps:
-      - name: Checkout Teleport
-        uses: actions/checkout@v4
-
       - name: Get Go version
         id: go-version
-        shell: bash
-        run: echo "go-version=$(make -s print-go-version | tr -d '\n')" >> $GITHUB_OUTPUT
+        run: |
+          GO_VERSION=$(grep '^go ' go.mod | awk '{print $2}')
+          echo "go-version=${GO_VERSION}" >> $GITHUB_OUTPUT
 
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          cache: false
           go-version: ${{ steps.go-version.outputs.go-version }}
+          cache: false
 
-      - name: Build binaries
-        shell: bash
+      - name: Build binaries for package
         run: |
-          export OS="windows"
-          make build/tsh build/tctl build/tbot
-
-      - name: Upload Windows binaries
-        uses: actions/upload-artifact@v4
-        with:
-          name: windows-binaries
-          path: |
-            build/tsh.exe
-            build/tctl.exe
-            build/tbot.exe
-          if-no-files-found: error
-
-  build-packages:
-    name: Build Debian Packages
-    runs-on: ubuntu-latest
-    needs: build-binaries-linux
-
-    permissions:
-      contents: read
-
-    steps:
-      - name: Checkout Teleport
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2 # v3.10.0
-        with:
-          driver: docker
-
-      - name: Download Linux binaries
-        uses: actions/download-artifact@v4
-        with:
-          name: linux-binaries
-          path: build/
-
-      - name: Make binaries executable
-        run: |
-          chmod +x build/tsh build/tbot build/tctl build/teleport
+          make build/tsh build/tbot build/tctl build/teleport
 
       - name: Get version
         id: version
