fix env variable

--- a/.github/workflows/build-docker-images.yaml
+++ b/.github/workflows/build-docker-images.yaml
@@ -55,6 +55,8 @@ jobs:
         run: |
           cd build.assets
           make webassets
+        env:
+          GOCACHE: /tmp/gocache
 
       - name: Build archive (required for .deb)
         run: |
