--- a/.github/workflows/build-docker-images.yaml
+++ b/.github/workflows/build-docker-images.yaml
@@ -148,28 +148,46 @@ jobs:
             cp "$DEB_FILE" "build/$EXPECTED_NAME"
           fi
 
-      - name: Build Teleport Docker image
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
+      - name: Set image tags
+        id: tags
+        run: |
+          TAGS="aazmy/teleport:${{ steps.version.outputs.version }}-${{ steps.arch.outputs.arch }}"
+          TAGS="$TAGS,aazmy/teleport:${{ steps.version.outputs.version }}"
+          if [ "${{ steps.arch.outputs.arch }}" = "amd64" ]; then
+            TAGS="$TAGS,aazmy/teleport:latest"
+          fi
+          echo "tags=$TAGS" >> $GITHUB_OUTPUT
+          echo "Tags: $TAGS"
+
+      - name: Build and push Teleport Docker image
         uses: docker/build-push-action@471d1dc4e07e5cdedd4c2171150001c434f0b7a4 # v6.15.0
         with:
           context: build/
           file: build.assets/charts/Dockerfile-distroless
-          push: false
-          tags: teleport:${{ steps.version.outputs.version }}-${{ steps.arch.outputs.arch }}
+          push: true
+          tags: ${{ steps.tags.outputs.tags }}
           build-args: |
             TELEPORT_VERSION=${{ steps.version.outputs.version }}
             TELEPORT_RELEASE_INFIX=
             TARGETARCH=${{ steps.arch.outputs.arch }}
-          load: true
+          platforms: linux/${{ steps.arch.outputs.arch }}
 
-      - name: Save Docker image
+      - name: Save Docker image (for artifact backup)
         run: |
-          docker save teleport:${{ steps.version.outputs.version }}-${{ steps.arch.outputs.arch }} \
+          docker pull aazmy/teleport:${{ steps.version.outputs.version }}-${{ steps.arch.outputs.arch }}
+          docker save aazmy/teleport:${{ steps.version.outputs.version }}-${{ steps.arch.outputs.arch }} \
             -o build/teleport-image-${{ steps.version.outputs.version }}-${{ steps.arch.outputs.arch }}.tar
 
-      - name: Upload Docker image
+      - name: Upload Docker image (backup)
         uses: actions/upload-artifact@v4
         with:
           name: teleport-docker-image
           path: build/teleport-image-*.tar
-          if-no-files-found: error
+          if-no-files-found: warn
 
