--- a/.github/workflows/build-docker-images.yaml
+++ b/.github/workflows/build-docker-images.yaml
@@ -71,6 +71,7 @@ jobs:
             -e CI=true \
             -e WEBASSETS_SKIP_BUILD=1 \
             -e RDPCLIENT_SKIP_BUILD=1 \
+            -e ADDFLAGS="-buildvcs=false" \
             $BUILDBOX_IMAGE \
             bash -c "rm -rf target/release/build target/release/deps/rdp_client* 2>/dev/null || true && make -C /go/src/github.com/gravitational/teleport full build-archive"
 
