--- a/.github/workflows/build-docker-images.yaml
+++ b/.github/workflows/build-docker-images.yaml
@@ -12,7 +12,7 @@ on:
 jobs:
   build-packages:
     name: Build Debian Packages
-    runs-on: ubuntu-latest-4-cores
+    runs-on: self-hosted
 
     permissions:
       contents: read
@@ -98,7 +98,7 @@ jobs:
 
   build-docker-images:
     name: Build Docker Images
-    runs-on: ubuntu-latest-4-cores
+    runs-on: self-hosted
     needs: build-packages
 
     permissions:
