--- a/.github/workflows/build-docker-images.yaml
+++ b/.github/workflows/build-docker-images.yaml
@@ -93,8 +93,14 @@ jobs:
           # Ensure ARCH is set correctly for the build
           ARCH=$(uname -m)
           if [ "$ARCH" = "x86_64" ]; then ARCH="amd64"; fi
-          export ARCH=$ARCH
-          make build-centos7-assets ARCH=$ARCH
+          # Set non-root UID/GID if running as root (UID 0)
+          RUNNER_UID=$(id -u)
+          RUNNER_GID=$(id -g)
+          if [ "$RUNNER_UID" = "0" ]; then
+            RUNNER_UID=1000
+            RUNNER_GID=1000
+          fi
+          make build-centos7-assets ARCH=$ARCH UID=$RUNNER_UID GID=$RUNNER_GID
 
       - name: Build buildbox-centos7 (from source)
         run: |
@@ -102,8 +108,14 @@ jobs:
           # Ensure ARCH is set correctly for the build
           ARCH=$(uname -m)
           if [ "$ARCH" = "x86_64" ]; then ARCH="amd64"; fi
-          export ARCH=$ARCH
-          make buildbox-centos7 ARCH=$ARCH
+          # Set non-root UID/GID if running as root (UID 0)
+          RUNNER_UID=$(id -u)
+          RUNNER_GID=$(id -g)
+          if [ "$RUNNER_UID" = "0" ]; then
+            RUNNER_UID=1000
+            RUNNER_GID=1000
+          fi
+          make buildbox-centos7 ARCH=$ARCH UID=$RUNNER_UID GID=$RUNNER_GID
 
       - name: Build webassets (required for teleport binary)
         run: |
