--- a/.github/workflows/build-docker-images.yaml
+++ b/.github/workflows/build-docker-images.yaml
@@ -140,11 +140,24 @@ jobs:
           cd build.assets
           ARCH=$(uname -m)
           if [ "$ARCH" = "x86_64" ]; then ARCH="amd64"; fi
+          # Set non-root UID/GID if running as root (UID 0)
+          RUNNER_UID=$(id -u)
+          RUNNER_GID=$(id -g)
+          if [ "$RUNNER_UID" = "0" ]; then
+            RUNNER_UID=1000
+            RUNNER_GID=1000
+            # Fix permissions on workspace and cache directories for container user
+            chown -R $RUNNER_UID:$RUNNER_GID "$(pwd)/.." /tmp/gomodcache /tmp/gocache 2>/dev/null || true
+            chmod -R u+w "$(pwd)/.." /tmp/gomodcache /tmp/gocache 2>/dev/null || true
+          fi
           BUILDBOX_IMAGE="ghcr.io/gravitational/teleport-buildbox-centos7:teleport18-${ARCH}"
           docker run --rm \
+            -u $RUNNER_UID:$RUNNER_GID \
             -v "$(pwd)/../":/go/src/github.com/gravitational/teleport \
             -w /go/src/github.com/gravitational/teleport \
             -e GOMODCACHE=/tmp/gomodcache \
+            -e GOCACHE=/go/cache \
+            -v /tmp/gocache:/go/cache \
             -e CI=true \
             -e WEBASSETS_SKIP_BUILD=1 \
             -e RDPCLIENT_SKIP_BUILD=1 \
