--- a/.github/workflows/build-docker-images.yaml
+++ b/.github/workflows/build-docker-images.yaml
@@ -18,30 +18,30 @@ jobs:
       contents: read
 
     steps:
-      - name: Install build tools
-        run: |
-          set -e
-          echo "Checking for make..."
-          if command -v make &> /dev/null; then
-            echo "make is already installed: $(make --version | head -1)"
-          else
-            echo "make not found, installing..."
-            if command -v apt-get &> /dev/null; then
-              sudo apt-get update
-              sudo apt-get install -y make build-essential
-            elif command -v yum &> /dev/null; then
-              sudo yum install -y make gcc
-            elif command -v dnf &> /dev/null; then
-              sudo dnf install -y make gcc
-            elif command -v apk &> /dev/null; then
-              sudo apk add make gcc musl-dev
-            else
-              echo "Unknown package manager. Please install make manually."
-              exit 1
-            fi
-            echo "Verifying make installation..."
-            make --version || (echo "make installation failed" && exit 1)
-          fi
+    #   - name: Install build tools
+    #     run: |
+    #       set -e
+    #       echo "Checking for make..."
+    #       if command -v make &> /dev/null; then
+    #         echo "make is already installed: $(make --version | head -1)"
+    #       else
+    #         echo "make not found, installing..."
+    #         if command -v apt-get &> /dev/null; then
+    #           sudo apt-get update
+    #           sudo apt-get install -y make build-essential
+    #         elif command -v yum &> /dev/null; then
+    #           sudo yum install -y make gcc
+    #         elif command -v dnf &> /dev/null; then
+    #           sudo dnf install -y make gcc
+    #         elif command -v apk &> /dev/null; then
+    #           sudo apk add make gcc musl-dev
+    #         else
+    #           echo "Unknown package manager. Please install make manually."
+    #           exit 1
+    #         fi
+    #         echo "Verifying make installation..."
+    #         make --version || (echo "make installation failed" && exit 1)
+    #       fi
 
       - name: Checkout Teleport
         uses: actions/checkout@v4
