--- a/.github/workflows/build-docker-images.yaml
+++ b/.github/workflows/build-docker-images.yaml
@@ -150,6 +150,10 @@ jobs:
             chown -R $RUNNER_UID:$RUNNER_GID "$(pwd)/.." /tmp/gomodcache /tmp/gocache 2>/dev/null || true
             chmod -R u+w "$(pwd)/.." /tmp/gomodcache /tmp/gocache 2>/dev/null || true
           fi
+          # Create and fix permissions on cache directory
+          mkdir -p /tmp/gocache
+          chown -R $RUNNER_UID:$RUNNER_GID /tmp/gocache 2>/dev/null || true
+          chmod -R 755 /tmp/gocache 2>/dev/null || true
           BUILDBOX_IMAGE="ghcr.io/gravitational/teleport-buildbox-centos7:teleport18-${ARCH}"
           docker run --rm \
             -u $RUNNER_UID:$RUNNER_GID \
@@ -163,7 +167,7 @@ jobs:
             -e RDPCLIENT_SKIP_BUILD=1 \
             -e ADDFLAGS="-buildvcs=false" \
             $BUILDBOX_IMAGE \
-            bash -c "rm -rf target/release/build target/release/deps/rdp_client* 2>/dev/null || true && make -C /go/src/github.com/gravitational/teleport full build-archive"
+            bash -c "mkdir -p /go/cache && chown -R $RUNNER_UID:$RUNNER_GID /go/cache 2>/dev/null || true && chmod -R 755 /go/cache 2>/dev/null || true && rm -rf target/release/build target/release/deps/rdp_client* 2>/dev/null || true && make -C /go/src/github.com/gravitational/teleport full build-archive"
 
       - name: Build .deb package
         run: |
