--- a/.github/workflows/build-docker-images.yaml
+++ b/.github/workflows/build-docker-images.yaml
@@ -178,32 +178,13 @@ jobs:
 
       - name: Build .deb package
         run: |
-          cd build.assets
+          # Build .deb package directly on host (no Docker-in-Docker needed)
+          # The archive is already built, we just need to package it
+          # build-package.sh will use Docker from the host to run the FPM container
           ARCH=$(uname -m)
           if [ "$ARCH" = "x86_64" ]; then ARCH="amd64"; fi
-          # Set non-root UID/GID if running as root (UID 0)
-          RUNNER_UID=$(id -u)
-          RUNNER_GID=$(id -g)
-          if [ "$RUNNER_UID" = "0" ]; then
-            RUNNER_UID=1000
-            RUNNER_GID=1000
-            # Fix permissions on workspace and cache directories for container user
-            chown -R $RUNNER_UID:$RUNNER_GID "$(pwd)/.." /tmp/gomodcache 2>/dev/null || true
-            chmod -R u+w "$(pwd)/.." /tmp/gomodcache 2>/dev/null || true
-          fi
-          BUILDBOX_IMAGE="ghcr.io/gravitational/teleport-buildbox-centos7:teleport18-${ARCH}"
-          # Mount docker socket and install docker CLI in container
-          DOCKER_GID=$(getent group docker | cut -d: -f3 || echo "999")
-          docker run --rm \
-            --privileged \
-            -u $RUNNER_UID:$DOCKER_GID \
-            -v "$(pwd)/../":/go/src/github.com/gravitational/teleport \
-            -v /var/run/docker.sock:/var/run/docker.sock \
-            -w /go/src/github.com/gravitational/teleport \
-            -e GOMODCACHE=/tmp/gomodcache \
-            -e CI=true \
-            $BUILDBOX_IMAGE \
-            bash -c "if ! command -v docker &> /dev/null; then curl -fsSL https://get.docker.com | sh || yum install -y docker; fi && make -C /go/src/github.com/gravitational/teleport oss-deb"
+          VERSION=$(grep '^VERSION=' Makefile | cut -d= -f2 | tr -d ' ')
+          make oss-deb ARCH=$ARCH VERSION=$VERSION
 
       - name: Upload .deb package
         uses: actions/upload-artifact@v4
